--- a/UNFORGOTTEN/Client/wwwroot/css/app.css
+++ b/UNFORGOTTEN/Client/wwwroot/css/app.css
@@ -99,3 +99,63 @@ a, .btn-link {
     .loading-progress-text:after {
         content: var(--blazor-load-percentage-text, "Loading");
     }
+
+.section-title {
+    color: #333;
+    font-size: 32px;
+    margin-bottom: 20px;
+}
+
+.info-section {
+    background-color: #f8f8f8;
+    padding: 60px 0;
+}
+
+.services-section {
+    background-color: #fff;
+    padding: 60px 0;
+}
+
+.slogans-section {
+    background-color: #f8f8f8;
+    padding: 60px 0;
+}
+
+.card-text {
+    font-size: 20px;
+    color: #555;
+    margin-bottom: 0;
+}
+
+.card {
+    border: none;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease;
+}
+
+    .card:hover {
+        transform: translateY(-10px);
+    }
+
+.more-section {
+    background-color: #f5f5f5;
+    padding: 60px 0;
+}
+
+    .more-section .card {
+        border: none;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        transition: transform 0.3s ease;
+    }
+
+        .more-section .card:hover {
+            transform: translateY(-10px);
+        }
+
+footer {
+    background-color: #333;
+    color: #fff;
+    padding: 40px 0;
+    font-size: 14px;
+    text-align: center;
+}
