Added services for posts and adding pages

--- a/UNFORGOTTEN/Client/_Imports.razor
+++ b/UNFORGOTTEN/Client/_Imports.razor
@@ -9,4 +9,5 @@
 @using Microsoft.JSInterop
 @using UNFORGOTTEN.Client
 @using UNFORGOTTEN.Client.Shared
+@using UNFORGOTTEN.Client.Services.PostService;
 
