--- a/UNFORGOTTEN/Client/Pages/PostsPage.razor
+++ b/UNFORGOTTEN/Client/Pages/PostsPage.razor
@@ -1,42 +1,29 @@
 ﻿@page "/postsPage"
-@using UNFORGOTTEN.Shared
-@inject HttpClient http
+@inject IPostService PostService
 
 <h3>PostsPage</h3>
 
-<table class="table">
-    <thead>
-        <tr>
-            <th>ID</th>
-            <th>Title</th>
-            <th>Author</th>
-            <th>Description</th>
-            <th>Added On</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var post in Posts)
-        {
-            <tr>
-                <td>@post.Id</td>
-                <td>@post.Title</td>
-                <td>@post.Author</td>
-                <td>@post.Description</td>
-                <td>@post.AddedOn.ToString("yyyy-MM-dd HH:mm:ss")</td>
-            </tr>
-        }
-    </tbody>
-</table>
+<a href="/addPage" class="btn btn-success">Add Post</a>
+
+<div class="row mt-3">
+    @foreach (var post in PostService.Posts)
+    {
+        <div class="col-md-6">
+            <div class="card mb-3">
+                <div class="card-body">
+                    <h5 class="card-title">@post.Title</h5>
+                    <h6 class="card-subtitle mb-2 text-muted">@post.Author</h6>
+                    <p class="card-text">@post.Description</p>
+                    <p class="card-text">@post.AddedOn.ToString("yyyy-MM-dd HH:mm")</p>
+                </div>
+            </div>
+        </div>
+    }
+</div>
 
 @code {
-    List<Post> Posts = new List<Post>();
-
     protected override async Task OnInitializedAsync()
     {
-        var result = await http.GetFromJsonAsync<List<Post>>("api/Posts");
-        if (result != null)
-        {
-            Posts = result;
-        }
+        await PostService.GetPosts();
     }
 }
