Added profile page

--- a/UNFORGOTTEN/Client/Shared/NavMenu.razor
+++ b/UNFORGOTTEN/Client/Shared/NavMenu.razor
@@ -38,6 +38,18 @@
                 </NotAuthorized>
             </AuthorizeView>
         </div>
+        <div class="nav-item px-3">
+            <AuthorizeView>
+                <Authorized>
+                    <NavLink class="nav-link" href="/accountPage">
+                        <span class="oi oi-person" aria-hidden="true"></span> Account Page
+                    </NavLink>
+                </Authorized>
+                <NotAuthorized>
+                    <span class="nav-link disabled">Log in to access Account Page</span>
+                </NotAuthorized>
+            </AuthorizeView>
+        </div>
     </nav>
 </div>
 
