Upgraded whole app

--- a/UNFORGOTTEN/Client/Pages/Index.razor
+++ b/UNFORGOTTEN/Client/Pages/Index.razor
@@ -2,7 +2,7 @@
 @using Microsoft.AspNetCore.Components.Web
 
 <div class="text-center">
-    <h3 class="page-title">UNFORGOTTEN</h3>
+    <h1 class="page-title">UNFORGOTTEN</h1>
 </div>
 
 <section class="info-section">
@@ -88,35 +88,34 @@
     </div>
 </section>
 
-
 <section class="more-section">
     <div class="container">
         <h2 class="section-title text-center">More Features</h2>
         <div class="row">
             <div class="col-md-4">
-                <div class="card">
-                    <img src="images/feature1.jpg" class="card-img-top" alt="Feature 1">
+                <div class="card card-equal-height">
+                    <img src="https://www.navex.com/blog/media/CACHE/images/img/5_reasons_you_need_a_framework_for_data_privacy_and_protection/813e03ede5fc21b25abe55b4e03dc434.jpg" class="card-img-top" height="290" alt="Feature 1">
                     <div class="card-body">
                         <h5 class="card-title text-center">Advanced Privacy Settings</h5>
-                        <p class="card-text">Take control of your privacy with our customizable privacy settings. Decide who can view your profile and posts.</p>
+                        <p class="card-text">Take control of your privacy with our customizable privacy settings.</p>
                     </div>
                 </div>
             </div>
             <div class="col-md-4">
-                <div class="card">
-                    <img src="images/feature2.jpg" class="card-img-top" alt="Feature 2">
+                <div class="card card-equal-height">
+                    <img src="https://club.coolpeople.cz/userimage/articles/CoolEvents.jpg?u=1Szybx" class="card-img-top" height="290" alt="Feature 2">
                     <div class="card-body">
                         <h5 class="card-title text-center">Event Planning and RSVP</h5>
-                        <p class="card-text">Plan and organize events easily with our event management feature. Send invitations and track RSVPs effortlessly.</p>
+                        <p class="card-text">Plan and organize events easily with our event management feature.</p>
                     </div>
                 </div>
             </div>
             <div class="col-md-4">
-                <div class="card">
-                    <img src="images/feature3.jpg" class="card-img-top" alt="Feature 3">
+                <div class="card card-equal-height">
+                    <img src="https://files.ably.io/ghost/prod/2023/01/build-a-realtime-chat-app-from-scratch--1-.png" class="card-img-top" height="290" alt="Feature 3">
                     <div class="card-body">
                         <h5 class="card-title text-center">Real-time Chat Messaging</h5>
-                        <p class="card-text">Stay connected with friends through our real-time chat messaging. Send instant messages and stay in touch wherever you are.</p>
+                        <p class="card-text">Stay connected with friends through our real-time chat messaging.</p>
                     </div>
                 </div>
             </div>
