--- a/UNFORGOTTEN/Client/Shared/NavMenu.razor
+++ b/UNFORGOTTEN/Client/Shared/NavMenu.razor
@@ -41,7 +41,7 @@
         <div class="nav-item px-3">
             <AuthorizeView>
                 <Authorized>
-                    <NavLink class="nav-link" href="/accountPage">
+                    <NavLink class="nav-link" href="authentication/profile">
                         <span class="oi oi-person" aria-hidden="true"></span> Account Page
                     </NavLink>
                 </Authorized>
