--- a/UNFORGOTTEN/Server/Areas/Identity/Pages/Account/ForgotPassword.cshtml
+++ b/UNFORGOTTEN/Server/Areas/Identity/Pages/Account/ForgotPassword.cshtml
@@ -3,6 +3,7 @@
 @{
     ViewData["Title"] = "Forgot your password?";
 }
+@using Microsoft.AspNetCore.Components.Web
 
 <h1>@ViewData["Title"]</h1>
 <h2>Enter your email.</h2>
