--- a/UNFORGOTTEN/Server/Areas/Identity/Pages/Account/Manage/ChangePassword.cshtml
+++ b/UNFORGOTTEN/Server/Areas/Identity/Pages/Account/Manage/ChangePassword.cshtml
@@ -4,6 +4,7 @@
     ViewData["Title"] = "Change password";
     ViewData["ActivePage"] = ManageNavPages.ChangePassword;
 }
+@using Microsoft.AspNetCore.Components.Web
 
 <h3>@ViewData["Title"]</h3>
 <partial name="_StatusMessage" for="StatusMessage" />
