--- a/UNFORGOTTEN/Server/Areas/Identity/Pages/Account/Manage/DeletePersonalData.cshtml
+++ b/UNFORGOTTEN/Server/Areas/Identity/Pages/Account/Manage/DeletePersonalData.cshtml
@@ -4,6 +4,7 @@
     ViewData["Title"] = "Delete Personal Data";
     ViewData["ActivePage"] = ManageNavPages.PersonalData;
 }
+@using Microsoft.AspNetCore.Components.Web
 
 <h3>@ViewData["Title"]</h3>
 
