--- a/UNFORGOTTEN/Server/Areas/Identity/Pages/Account/RegisterConfirmation.cshtml
+++ b/UNFORGOTTEN/Server/Areas/Identity/Pages/Account/RegisterConfirmation.cshtml
@@ -3,6 +3,7 @@
 @{
     ViewData["Title"] = "Register confirmation";
 }
+@using Microsoft.AspNetCore.Components.Web
 
 <h1>@ViewData["Title"]</h1>
 @{
