--- a/UNFORGOTTEN/Server/Areas/Identity/Pages/Account/ResetPasswordConfirmation.cshtml
+++ b/UNFORGOTTEN/Server/Areas/Identity/Pages/Account/ResetPasswordConfirmation.cshtml
@@ -3,6 +3,7 @@
 @{
     ViewData["Title"] = "Reset password confirmation";
 }
+@using Microsoft.AspNetCore.Components.Web
 
 <h1>@ViewData["Title"]</h1>
 <p>
