--- a/UNFORGOTTEN/Client/wwwroot/css/app.css
+++ b/UNFORGOTTEN/Client/wwwroot/css/app.css
@@ -114,6 +114,10 @@ a, .btn-link {
 .services-section {
     background-color: #fff;
     padding: 60px 0;
+    border: none;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease;
+    transform: translateY(-10px);
 }
 
 .slogans-section {
@@ -199,3 +203,24 @@ footer {
         background-color: #0056b3;
         border-color: #0056b3;
     }
+
+.card-equal-height {
+    display: flex;
+    flex-direction: column;
+}
+
+    .card-equal-height .card-body {
+        flex-grow: 1;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .card-equal-height .card-img-top {
+        object-fit: cover;
+    }
+
+    .card-equal-height .card-text {
+        text-align: center;
+    }
+
