--- a/UNFORGOTTEN/Server/Areas/Identity/Pages/Account/Manage/TwoFactorAuthentication.cshtml
+++ b/UNFORGOTTEN/Server/Areas/Identity/Pages/Account/Manage/TwoFactorAuthentication.cshtml
@@ -5,6 +5,7 @@
     ViewData["Title"] = "Two-factor authentication (2FA)";
     ViewData["ActivePage"] = ManageNavPages.TwoFactorAuthentication;
 }
+@using Microsoft.AspNetCore.Components.Web
 
 <partial name="_StatusMessage" for="StatusMessage" />
 <h3>@ViewData["Title"]</h3>
