--- a/UNFORGOTTEN/Server/Areas/Identity/Pages/Account/ResetPassword.cshtml
+++ b/UNFORGOTTEN/Server/Areas/Identity/Pages/Account/ResetPassword.cshtml
@@ -3,6 +3,7 @@
 @{
     ViewData["Title"] = "Reset password";
 }
+@using Microsoft.AspNetCore.Components.Web
 
 <h1>@ViewData["Title"]</h1>
 <h2>Reset your password.</h2>
