--- a/UNFORGOTTEN/Client/Shared/NavMenu.razor
+++ b/UNFORGOTTEN/Client/Shared/NavMenu.razor
@@ -41,6 +41,18 @@
         <div class="nav-item px-3">
             <AuthorizeView>
                 <Authorized>
+                    <NavLink class="nav-link" href="/eventsPage">
+                        <span class="oi oi-people" aria-hidden="true"></span> Events Page
+                    </NavLink>
+                </Authorized>
+                <NotAuthorized>
+                    <span class="nav-link disabled">Log in to access Events Page</span>
+                </NotAuthorized>
+            </AuthorizeView>
+        </div>
+        <div class="nav-item px-3">
+            <AuthorizeView>
+                <Authorized>
                     <NavLink class="nav-link" href="authentication/profile">
                         <span class="oi oi-person" aria-hidden="true"></span> Account Page
                     </NavLink>
