--- a/UNFORGOTTEN/Client/_Imports.razor
+++ b/UNFORGOTTEN/Client/_Imports.razor
@@ -7,7 +7,8 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
+@using UNFORGOTTEN.Shared
 @using UNFORGOTTEN.Client
 @using UNFORGOTTEN.Client.Shared
-@using UNFORGOTTEN.Client.Services.PostService;
+@using UNFORGOTTEN.Client.Services.PostService
 
