--- a/UNFORGOTTEN/Client/_Imports.razor
+++ b/UNFORGOTTEN/Client/_Imports.razor
@@ -11,4 +11,4 @@
 @using UNFORGOTTEN.Client
 @using UNFORGOTTEN.Client.Shared
 @using UNFORGOTTEN.Client.Services.PostService
-
+@using UNFORGOTTEN.Client.Services.EventService
